--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a demo of babel in f2e-server",
   "main": "index.html",
   "scripts": {
-    "start": "f2eserver start",
+    "start": "f2eserver start & explorer http://localhost/index.html?listen=true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,6 +32,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
