--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-action": "^1.1.0",
     "redux-thunk": "^2.1.0"
   }
 }
